apps/ntfy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  namespace: ntfy
  labels:
    app: ntfy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      labels:
        app: ntfy
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: ntfy
          image: binwiederhier/ntfy:v2.11.0
          ports:
            - containerPort: 80
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            seccompProfile:
              type: "RuntimeDefault"
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: ntfy-data
              mountPath: /var/cache/ntfy
              subPath: ntfy_cache

            - name: ntfy-data
              mountPath: /etc/ntfy
              subPath: ntfy_data
          readinessProbe:
            httpGet:
              path: /v1/health
              port: 80
            initialDelaySeconds: 45
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /v1/health
              port: 80
            initialDelaySeconds: 45
            periodSeconds: 15
            failureThreshold: 3
      volumes:
        - name: ntfy-data
          persistentVolumeClaim:
            claimName: ntfy-pvc
