apps/ntfy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: ntfy
spec:
  selector:
    app: ntfy
  ports:
    - port: 80
      targetPort: 80
